Dark Mode - Logo needs fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,9 +4,9 @@
 
 @layer components {
   .navBtn {
-    @apply inline-flex h-6 cursor-pointer transition-all duration-150 ease-out hover:scale-125;
+    @apply inline-flex h-6 cursor-pointer transition-all duration-150 ease-out hover:scale-125 dark:text-slate-300;
   }
   .btn {
-    @apply h-7 cursor-pointer transition-all duration-150 ease-out hover:scale-125;
+    @apply h-7 cursor-pointer transition-all duration-150 ease-out hover:scale-125 dark:text-slate-300;
   }
 }
